--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,12 @@
-/vendor
+/bootstrap/compiled.php
+.env.*.php
+.env.php
 .env
+/vendor
+/node_modules
+Homestead.yaml
+Homestead.json
+.env
+.idea
+/.idea
+/storage
